# numpyro_psychometric_function_tutorial

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed_data/: demo_data_full.csv
data/raw_data/: experiment_0_2023-11-23_11h33.38.828.csv  experiment_0_2023-11-23_11h44.39.122.csv  experiment_0_2023-11-23_12h14.19.849.csv  experiment_0_2023-11-23_12h15.21.294.csv  experiment_0_2023-11-23_12h23.55.083.csv  experiment_0_2023-11-23_12h45.52.706.csv  experiment_0_2023-11-23_13h09.41.805.csv  experiment_0_2023-11-23_13h19.42.099.csv  experiment_0_2023-11-29_11h51.35.011.csv  experiment_0_2023-11-29_12h01.49.418.csv  experiment_0_2023-11-29_12h17.28.545.csv  experiment_0_2023-11-29_12h40.25.154.csv  experiment_0_2023-11-29_12h49.42.970.csv  experiment_0_2023-11-29_14h35.39.334.csv  experiment_0_2023-11-29_14h47.17.872.csv  experiment_0_2023-11-29_14h56.44.760.csv  experiment_0_2024-01-08_17h03.24.727.csv  experiment_1_2023-11-22_09h58.29.564.csv  experiment_1_2023-11-22_10h02.42.666.csv  experiment_1_2023-11-22_10h08.07.376.csv  experiment_1_2023-11-22_10h12.46.416.csv  experiment_1_2023-11-22_10h19.19.867.csv  experiment_1_2023-11-22_10h23.35.158.csv  experiment_1_2023-11-22_10h33.17.548.csv  experiment_1_2023-11-22_10h37.17.491.csv  experiment_1_2023-11-22_10h52.21.782.csv  experiment_1_2023-11-22_11h06.34.677.csv  experiment_1_2023-11-22_11h22.54.798.csv  experiment_1_2023-11-22_11h37.05.789.csv  experiment_1_2023-11-22_17h47.29.388.csv  (+9 more)
scripts/: fit_single_cells.py  numpyro_model_exploration.qmd
src/: helpers.py  numpyro_models.py
