[tool.poetry]
name = "numpyro-psyfunc-tutorial"
version = "0.1.0"
description = ""
authors = ["Thomas Wallis <thomas.wallis@tu-darmstadt.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpyro = "^0.13"
pandas = "^2.1"
plotnine = "^0.12"
jupyterlab = "^4.0"
arviz = "^0.16"
altair = "^5.2"
psignifit = {git = "https://github.com/wichmann-lab/python-psignifit.git"}
graphviz = "^0.20"

[tool.poetry.group.dev.dependencies]
black = "^23.11"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
